mise en place des dependencies de sécurité et validation

--- a/frontend/src/app/sauce-list/sauce-list.component.html
+++ b/frontend/src/app/sauce-list/sauce-list.component.html
@@ -8,5 +8,6 @@
     <img [src]="sauce.imageUrl">
     <h4>{{ sauce.name | uppercase }}</h4>
     <p>Heat: {{ sauce.heat }}/10</p>
+    <p class="main_pepper">{{ sauce.mainPepper }}</p>
   </div>
 </div>
